# llm-quiz-creator-streamlitapp-trainer

./: README.MD  database.sql  pyproject.toml
src/: test1.ipynb
src/database_scripts/: upload_questions_json.py
src/database_scripts/jsons/: q1.json  q2.json  q3.csv  q4.csv  q5.csv
src/lab/: elaborate_more.ipynb  generate_questions.ipynb  generate_questions2.ipynb  generate_questions_3.ipynb  generate_questions_4.ipynb  generate_questions_5_groq.ipynb  generate_questions_6_google_api_structured.ipynb  generate_questions_7_google_api_without_structured.ipynb  generate_questions_8_groq_2.ipynb  generate_web2.ipynb  generate_web3.ipynb  math.html  spliters_testes.ipynb  teste_results.ipynb  teste_results.ipynb (df) - teste_results.ipynb (df).csv  teste_results.ipynb (df) - teste_results.ipynb (df).csv:Zone.Identifier  teste_results.ipynb (df).csv
src/lab/old/: generate_questions.ipynb  generate_web.ipynb  generate_web2.ipynb
src/prompt_tests/: generate_questions.ipynb
src/streamlit_app/: main.py
