[tool.poetry]
name = "quiz-proj2"
version = "0.1.0"
description = ""
authors = ["Rhuan Barros <rhuanbarros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
supabase = "^2.3.2"
streamlit = "^1.29.0"
langchain = "^0.1.13"
langchain-community = "^0.0.29"
langchain-google-genai = "^0.0.11"
langchain-text-splitters = "^0.0.1"
langchain-experimental = "^0.0.55"
json-repair = "^0.10.1"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
