[tool.poetry]
name = "quiz-proj2"
version = "0.1.0"
description = ""
authors = ["Rhuan Barros <rhuanbarros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
supabase = "^2.3.2"
streamlit = "^1.29.0"
json-repair = "^0.10.1"
pandas = "^2.2.1"
html2text = "^2024.2.26"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.1"
spacy = "^3.7.4"
python-dotenv = "^1.0.1"
langchain-groq = "^0.1.9"
langchain = "^0.2.14"
langchain-google-genai = "^1.0.8"
google-generativeai = "^0.7.2"
jupyter = "^1.0.0"
ipywidgets = "^8.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

